<resources>
    <string name="app_name">Haodeli</string>
    <string name="deveces">device</string>
    <string name="health">health</string>
    <string name="news">news</string>
    <string name="shop">mall</string>
    <string name="action_settings">setting</string>

    <string name="ok">confirm</string>
    <string name="cancel">cancel</string>
    <string name="home">home</string>
    <string name="mydevices">devices</string>
    <string name="profile">profile</string>
    <string name="security">security</string>
    <string name="settings">settings</string>
    <string name="about">about</string>
    <string name="feedback">feedback</string>
    <string name="username">logout</string>
    <string name="clearcacke">clearcache</string>
    <string name="help">help</string>
    <string name="logout">logout</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="switch1">switch1</string>
    <string name="switch2">switch2</string>
    <string name="switch3">switch3</string>
    <string name="switch4">switch4</string>
    <string name="connectting">connectting</string>
    <string name="connected">device is connected</string>
    <string name="noconnect">device has not connect</string>
    <string name="unconnected">device has disconnect</string>
    <string name="currenttmp">temperature:%s°C</string>
    <string name="currenttmp1">temperature</string>
    <string name="currenttmpnull">no data</string>
    <string name="sensor_abnormal">Abnormal sensor</string>

    <string name="smart_cloths">fashion apparel</string>
    <string name="smart_yangsheng">keeping in good health</string>
    <string name="smart_suit">smart suit</string>
    <string name="smart_waistcoat">smart waistcoat</string>
    <string name="smart_cheongsam">smart cheongsam</string>
    <string name="smart_coat">smart coat</string>
    <string name="smart_trousers">smart trousers</string>

    <string name="smart_gloves">smart gloves</string>
    <string name="smart_neckguard">smart neckguard</string>
    <string name="smart_waist_support">smart waist support</string>
    <string name="smart_shoulder">smart shoulder</string>
    <string name="smart_knee">smart knee</string>
    <string name="smart_legguard">smart legguard</string>

    <string name="nodevice">o equipment, the current type is added to search now?</string>
    <string name="askdisconnect">Are you sure you want to disconnect?</string>
    <string name="nonsupportble">Your phone doesn\'t support BLE, please try to replace the phone</string>
    <string name="connectionprompt">Please input password (default:0000)</string>
    <string name="unknow_device">unknow device</string>
    <string name="isconnected">connected</string>
    <string name="signal_strength">Signal strength</string>
    <string name="register">Register</string>
    <string name="country">Country</string>
    <string name="mobile">Mobile</string>
    <string name="verifycode">Verificode</string>
    <string name="password">Password</string>
    <string name="verifynote">Please Enter Verify Code</string>
    <string name="mobilenote">Please enter the phone number</string>
    <string name="passwordnote">Please enter the password</string>
    <string name="name">Blackgold Ziene</string>
    <string name="qqlogin">QQ Login</string>
    <string name="wxlogin">Wechat Login</string>
    <string name="wblogin">Weibo Login</string>
    <string name="phonelogin">Phone Login</string>
    <string name="exit_again">Again to exit</string>
    <string name="title">Blackgold Ziene</string>

    <string name="update_content">Detected a new version, whether to update</string>
    <string name="update_title">Update</string>

    <string name="downloading">downloading...</string>

</resources>
