<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" >

    <include layout="@layout/toolbar"
        android:id="@+id/include6" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include6"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"/>
        <EditText
            android:layout_weight="1"
            android:hint="@string/mobilenote"
            android:layout_width="wrap_content"
            android:digits="0123456789"
            android:maxLength="11"
            android:layout_height="wrap_content"
            android:id="@+id/mobile" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GO"
            android:id="@+id/verify" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/security_code" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:layout_weight="1"
            android:hint="@string/verifynote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verifycode" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:layout_weight="1"
            android:hint="@string/passwordnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="#fff"
        android:id="@+id/ok"
        android:background="@drawable/ok_btn"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>