<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sunshine.smart.activity.MobileLoginActivity">

    <include layout="@layout/toolbar" android:id="@+id/include7" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_below="@+id/include7"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:layout_weight="1"
            android:hint="@string/mobilenote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mobile" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:layout_weight="1"
            android:hint="@string/passwordnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="#fff"
        android:id="@+id/ok"
        android:background="@drawable/ok_btn"
        android:layout_below="@+id/linearLayout5"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
