<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#000"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageView2"
        android:layout_marginTop="60dp"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="250dip"
        android:layout_height="40dip"
        android:src="@mipmap/name"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/textView8"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/qqlogin"
        android:drawableLeft="@mipmap/qqicon"
        android:drawablePadding="15dp"
        android:text="@string/qqlogin"
        android:textColor="#fff"
        android:background="#000"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:textSize="16dp" />


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/wxlogin"
        android:drawableLeft="@mipmap/wxicon"
        android:drawablePadding="15dp"
        android:text="@string/wxlogin"
        android:textColor="#fff"
        android:background="#000"
        android:layout_below="@+id/qqlogin"
        android:layout_centerHorizontal="true"
        android:textSize="16dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wblogin"
        android:drawableLeft="@mipmap/wbicon"
        android:drawablePadding="15dp"
        android:text="@string/wblogin"
        android:textColor="#fff"
        android:background="#000"
        android:visibility="gone"
        android:layout_below="@+id/wxlogin"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/phonelogin"
        android:drawableLeft="@mipmap/phoneicon"
        android:drawablePadding="15dp"
        android:text="@string/phonelogin"
        android:textColor="#fff"
        android:background="#000"
        android:layout_below="@+id/wblogin"
        android:layout_centerHorizontal="true"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:id="@+id/textView9"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="随便逛逛"
        android:textSize="16dp"
        android:padding="10dp"
        android:id="@+id/suibian"
        android:textColor="#fff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="注册用户"
        android:textSize="16dp"
        android:padding="10dp"
        android:textColor="#fff"
        android:id="@+id/textView13"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView10"
        android:src="@mipmap/fenzi"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        android:visibility="gone" />


</RelativeLayout>